[tool.poetry]
name = "swiftie-lyric-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lyricsgenius = "3.0.1"
python-dotenv = "1.0.1"
openai = "^1.40.8"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.21"
langchain-experimental = "^0.0.64"
neo4j = "^5.23.1"
streamlit = "^1.37.1"
youtube-search = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
